<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/addStudentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_student_button"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/viewStudentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_students_button"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"/>
</LinearLayout>